--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.5.0
+  line_icons: ^2.0.3
 
 dev_dependencies:
   flutter_test:
